@@ -118,5 +118,6 @@ extern void lto_symtab_merge_fn (tree new_fn,
                                  enum ld_plugin_symbol_resolution resolution);
 
 extern tree lto_symtab_prevailing_decl (tree decl);
+extern enum ld_plugin_symbol_resolution lto_symtab_get_resolution (tree decl);
 
 #endif  /* GCC_LTO_TREE_IN_H  */
